src/tests/snapshots/cendol__tests__semantic_const_eval_extensions__alignof_int.snap
---
source: src/tests/semantic_const_eval_extensions.rs
expression: "format!(\"Expression: {}\\nResult: {}\", expr, val_str)"
---
Expression: _Alignof(int)
Result: 4
