src/tests/snapshots/cendol__tests__semantic_const_eval_extensions__short_circuit_or.snap
---
source: src/tests/semantic_const_eval_extensions.rs
expression: "format!(\"Expression: {}\\nResult: {}\", expr, val_str)"
---
Expression: 1 || (1 / 0)
Result: 1
