src/tests/snapshots/cendol__tests__semantic_const_eval_extensions__sizeof_expr_arithmetic.snap
---
source: src/tests/semantic_const_eval_extensions.rs
expression: "format!(\"Expression: {}\\nResult: {}\", expr, val_str)"
---
Expression: sizeof(1 + 1)
Result: 4
